feat: backend dashboard and models

--- a/cashboard/templates/dashboards.html
+++ b/cashboard/templates/dashboards.html
@@ -16,11 +16,11 @@
             <p class="blablaHeader">Ca$h Board</p>
             <a href="" class="ancora">Gráficos</a>
             <a rel="noopener noreferrer" class="ancora">•</a>
-            <a href="" class="ancora">Minhas finanças</a>
+            <a href="{% url 'mercado' %}" class="ancora">Minhas finanças</a>
         </div>
 
     </header>
-    </header>
+
     <div class="container">
         <div class="header">
             <div class="metric green">
@@ -46,6 +46,10 @@
             <div class="metric green">
                 <span>3º Trimestre</span>
                 <h2>R$ 3.765</h2>
+            </div>
+            <div class="metric green">
+                <span>4º Trimestre</span>
+                <h2>R$ 20.000</h2>
             </div>
         </div>
 
