--- a/cashboard/static/styles/financas.css
+++ b/cashboard/static/styles/financas.css
@@ -201,3 +201,41 @@ body {
     background-color: rgba(204, 153, 255, 0.2);
     border: 2px solid #CC99FF;
 }
+/* O Modal (inicialmente oculto) */
+.modal {
+    display: none; /* Modal começa invisível */
+    position: fixed;
+    z-index: 1; /* Fica sobre outros elementos */
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto; /* Ativa o scroll se necessário */
+    background-color: rgba(0, 0, 0, 0.4); /* Fundo escuro semi-transparente */
+}
+
+/* O conteúdo do modal */
+.modal-content {
+    background-color: white;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 500px;
+    border-radius: 10px;
+}
+
+/* O botão de fechar (X) */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
