--- a/cashboard/templates/financas.html
+++ b/cashboard/templates/financas.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Financeiro</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'styles/dashboard.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/financas.css' %}">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
@@ -56,7 +56,7 @@
             <div class="categorias">
                 <input class="busca" type="text" name="" id="" placeholder="Pesquisar...">
                 <div class="grupo-botoes">
-                    <button class="btn-cat adicionar">Adicionar</button>
+                    <button id="openModalBtn" class="btn-cat adicionar">Adicionar</button>
                     <button class="btn-cat remover">Remover</button>
                     <button class="btn-cat editar">Editar</button>
                 </div>
@@ -83,6 +83,13 @@
             </div>
         </div>
     </div>
-    <script type="module" src="{% static 'scripts/dashboard.js' %}"></script>
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <span id="closeModalBtn" class="close">&times;</span>
+            <form action=""></form>
+        </div>
+    </div>
+    <script type="module" src="{% static 'scripts/financas.js' %}"></script>
 </body>
+
 </html>
