--- a/cashboard/templates/login.html
+++ b/cashboard/templates/login.html
@@ -13,7 +13,11 @@
 
 <body>
     <main id="container">
-        <form id="form-login">
+        <form id="form-login" method="POST" action="{% url 'index' %}">
+            {% csrf_token %}
+            {% if error %}
+            <p style="color: red;">{{ error }}</p>
+            {% endif %}
             <div class="login-header">
                 <div class="logo">
                     <img src="" alt="img-logo">
@@ -26,7 +30,7 @@
 
             <div class="input-group">
                 <label for="">Email</label>
-                <input type="email" id="email" placeholder="Digite seu email" required>
+                <input type="email" id="email" name="email" placeholder="Digite seu email" required>
             </div>
 
             <div class="input-group">
@@ -69,7 +73,6 @@
     </main>
 
     <script src="../static/scripts/toggle_password.js"></script>
-    <script src="../static/scripts/login.js"></script>
 </body>
 
 </html>
