--- a/cashboard/templates/login.html
+++ b/cashboard/templates/login.html
@@ -39,16 +39,11 @@
                 <i class="bi bi-eye-fill" id="toggle-password"></i>
             </div>
 
-            <div class="btn-group">
-                <button type="submit">Entrar</button>
-            </div>
+            <button class="btn-group" type="submit">Entrar</button>
 
             <p class="sem_conta">Ainda não possui uma conta?</p>
 
-            <div class="btn-group">
-                <a id="btn-cadastro" href="{% url 'cadastro' %}">Cadastre-se</a>
-                <!-- <button></button> -->
-            </div>
+            <a class="btn-group" id="btn-cadastro" href="{% url 'cadastro' %}">Cadastre-se</a>
         </form>
 
         <section id="wave">
