--- a/cashboard/templates/dashboards.html
+++ b/cashboard/templates/dashboards.html
@@ -8,17 +8,19 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'styles/dashboard.css' %}">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header class="headerDashboard">
-        <div>
+        <div style="display: block;">
             <p class="blablaHeader">Ca$h Board</p>
             <a href="" class="ancora">Gráficos</a>
             <a rel="noopener noreferrer" class="ancora">•</a>
-            <a href="{% url 'mercado' %}" class="ancora">Minhas finanças</a>
+            <a href="{% url 'financas' %}" class="ancora">Minhas finanças</a>
         </div>
-
+        <!-- <i class="fa-solid fa-arrow-left" style="color: white; width: 50px; height: 50px;"></i> -->
+         <a href="{% url 'logout' %}" class="custom-button">Logout</a>
     </header>
 
     <div class="container">
