--- a/cashboard/static/styles/mercado.css
+++ b/cashboard/static/styles/mercado.css
@@ -1,109 +1,7 @@
-/* style.css */
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f8f8f8;
+.cor-dinamica {
+    background-color: #FF6666 !important;
 }
 
-.headerMercado {
-    background-color: #ff5c5c;
-    color: white;
-    padding: 10px 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.blablaHeader {
-    font-size: 24px;
-    font-weight: bold;
-}
-.ancora
-{
-    text-decoration: none;
-    color: #ffff;
-    font-weight: bold;
-    margin-right: 0.5vw;
-}
-
-.botoes {
-    margin: 1rem;
-    display: flex;
-    justify-content: space-between;
-}
-
-.btn1,
-.btn2 {
-    background-color: #ff5c5c;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    padding: 10px 15px;
-    margin: 10px 5px;
-    cursor: pointer;
-    font-size: 16px;
-}
-
-.btn1:hover,
-.btn2:hover {
-    background-color: #e14d4d;
-}
-
-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 15vh;
-    width: 100vw;
-}
-
-.paiTabela {
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    width: 80vw;
-    max-width: 80vw;
-}
-
-.tabelaMercado {
-    width: 100%;
-    border-collapse: collapse;
-}
-
-.tabelaMercado thead {
-    background-color: #ff5c5c;
-    color: white;
-}
-
-.tabelaMercado th,
-.tabelaMercado td {
-    border: 1px solid #ddd;
-    padding: 10px;
-    text-align: left;
-}
-
-.tabelaMercado th {
-    font-weight: bold;
-}
-
-.tabelaMercado tbody tr:nth-child(even) {
-    background-color: #f9f9f9;
-}
-
-.tabelaMercado tbody tr:hover {
-    background-color: #ffeded;
-}
-
-.tabelaMercado tbody td {
-    color: #333;
-}
-
-.tabelaMercado tbody td:last-child {
-    font-weight: bold;
-    color: #ff5c5c;
-}
-
-button {
-    font-family: inherit;
+#mercado{
+    display: block;
 }
