--- a/cashboard/static/styles/cadastro.css
+++ b/cashboard/static/styles/cadastro.css
@@ -19,44 +19,52 @@ body {
     width: 100%;
     height: 100vh;
     justify-content: center;
-    position: relative; /* Adicionado para garantir o controle de camadas */
+    position: relative;
 }
 
-/* Controlar a largura e o layout responsivo da section */
 #cadastro {
     margin-top: 3rem;
     background-color: #fff;
     border: 5px solid #c3c3c3;
     border-radius: 20px;
     padding: 1rem;
-    height: 90%; /* Remover altura fixa */
+    height: 90%;
     z-index: 1;
-    display: grid;
     grid-template-columns: 1fr;
     justify-items: center;
-    width: 90%; /* Ajustar a largura conforme necessário */
-    max-width: 600px; /* Definir uma largura máxima */
-    position: relative; /* Garantir que o formulário não sobreponha as ondas */
+    width: 90%;
+    max-width: 600px;
+    position: relative;
 }
 
 /* Remover fundo do form e garantir responsividade */
 #form-register {
-    background: none; /* Remover fundo */
+    background: none;
+    /* Remover fundo */
     display: grid;
     grid-template-columns: 1fr;
     justify-items: center;
     width: 100%;
 }
 
-/* Logos, título e inputs como estão */
 .logo img {
-    width: 200px;
-    height: 200px;
+    height: 50px;
+    width: 50px;
+    padding-right: 5px;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 32px;
+    font-weight: bold;
+    user-select: none;
 }
 
 .input-group {
     width: 90%;
-    margin: 0.3rem;
+    margin: 1rem;
     position: relative;
 }
 
@@ -82,38 +90,30 @@ body {
 }
 
 .btn-group {
-    border: 2px solid #25744D;
-    background-color: #fff;
-    transition: all 0.3s ease;
-    width: 90%;
-    text-align: center;
-    font-size: 1rem;
+
+    background-color: #25744d;
+    color: #FFFFFF;
+    font-size: medium;
+    text-decoration: none;
+    display: block;
+    align-items: center;
+    gap: 0.5rem;
+    padding: 0.5rem 1rem;
+    border-radius: 0px;
     cursor: pointer;
-    user-select: none;
+    font-weight: bold;
+    border: 1px solid #257400;
+    width: 80%;
+    text-align: center;
+    text-transform: uppercase;
+    margin-top: 1rem;
 }
 
 .btn-group:hover {
-    background-color: #25744D;
-}
-
-.btn-group:hover button {
-    color: #fff;
-}
-
-.btn-group button {
-    background: none;
-    border: none;
-    font-size: 1rem;
-    font-weight: bold;
-    color: #25744D;
-    width: 100%;
-    padding: 0.5rem 0;
-    cursor: inherit;
-    user-select: none;
-}
-
-.btn-group button:hover {
-    color: #fff;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    filter: brightness(110%);
+    transform: scale(1.05);
+    transition: all 0.3s ease;
 }
 
 #password-valid {
@@ -130,15 +130,19 @@ body {
     color: red;
 }
 
-.password-requirements p{
+.password-requirements {
+    margin-bottom: 2rem;
+}
+
+.password-requirements p {
     font-size: 1rem;
 }
 
-.password-requirements li{
+.password-requirements li {
     font-size: 0.8rem;
 }
 
-.password-requirements ul{
+.password-requirements ul {
     list-style: none;
 }
 
@@ -157,7 +161,8 @@ body {
     left: 0;
     width: 100%;
     overflow: hidden;
-    z-index: -1; /* Garante que a wave fique abaixo do conteúdo */
+    z-index: -1;
+    /* Garante que a wave fique abaixo do conteúdo */
 }
 
 /* Responsividade */
