--- a/cashboard/static/styles/login.css
+++ b/cashboard/static/styles/login.css
@@ -35,11 +35,26 @@ body {
     width: 30rem;
 }
 
+.logo img {
+    height: 50px;
+    width: 50px;
+    padding-right: 5px;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 32px;
+    font-weight: bold;
+    user-select: none;
+}
+
 .input-group {
     display: flex;
     flex-direction: column;
     margin: 1rem;
-    position: relative ;
+    position: relative;
     width: 100%;
 }
 
@@ -77,10 +92,9 @@ body {
 } */
 
 .btn-group {
-    
+
     background-color: #25744d;
-    color: #FFFFFF; 
-    font-family: Arial, system-ui, sans-serif;
+    color: #FFFFFF;
     font-size: medium;
     text-decoration: none;
     display: block;
@@ -94,17 +108,17 @@ body {
     width: 80%;
     text-align: center;
     text-transform: uppercase;
-  
+
 }
 
 .btn-group:hover {
-  
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      filter: brightness(110%);
-     transform: scale(1.05); 
-      transition: all 0.3s ease;
-    
+
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    filter: brightness(110%);
+    transform: scale(1.05);
+    transition: all 0.3s ease;
 }
+
 .sem_conta {
     margin-top: 1rem;
 }
