--- a/cashboard/templates/financas.html
+++ b/cashboard/templates/financas.html
@@ -8,16 +8,25 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'styles/financas.css' %}">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="shortcut icon" href="{%static 'assets/logo.png'%}" type="image/x-icon">
 </head>
 
 <body>
     <header class="headerDashboard">
-        <div>
-            <p class="blablaHeader">Ca$h Board</p>
-            <a href="" class="ancora">Gráficos</a>
+        <div style="display: block;">
+            <div class="logo">
+                <img src="{%static 'assets/logo2.png'%}" alt="">
+                <p>Ca$h Board</p>
+            </div>
+            <a href="{% url 'dashboards' %}"
+                class="{% if request.path == '/dashboards' %}active{% endif %} ancora">Gráficos</a>
             <a rel="noopener noreferrer" class="ancora">•</a>
-            <a href="" class="ancora">Minhas finanças</a>
+            <a href="{% url 'financas' %}" class="{% if request.path == '/financas' %}active{% endif %} ancora">Minhas
+                finanças</a>
         </div>
+
+        <a href="{% url 'logout' %}" class="custom-button"><img src="{% static 'assets/logout.svg' %}" alt=""></a>
     </header>
     <div class="container">
         <div class="btn-relatorio">
@@ -55,9 +64,8 @@
             <div class="categorias">
                 <input class="busca" type="text" name="" id="" placeholder="Pesquisar...">
                 <div class="grupo-botoes">
-                    <button id="openModalBtn" class="btn-cat adicionar">Adicionar</button>
-                    <button class="btn-cat remover">Remover</button>
-                    <button class="btn-cat editar">Editar</button>
+                    <button id="openModalBtn" class="btn-cat adicionar" data-toggle="modal" data-target="#exampleModal">Adicionar</button>
+                    <button class="btn-cat editar" data-toggle="modal" data-target="#Modal3">Editar</button>
                 </div>
                 <div class="categorias-conteudo">
                     <a class="categoria-input mercado" href="{% url 'categoria_view' 'mercado' %}">
@@ -78,17 +86,16 @@
                     <a class="categoria-input poupanca" href="{% url 'categoria_view' 'poupanca' %}">
                         <img src="{% static 'assets/poupancasvg.svg' %}" alt="">
                     </a>
-                </div>                
+                </div>
             </div>
         </div>
     </div>
-    <div id="myModal" class="modal">
-        <div class="modal-content">
-            <span id="closeModalBtn" class="close">&times;</span>
-            <form action=""></form>
-        </div>
     </div>
-    <script type="module" src="{% static 'scripts/financas.js' %}"></script>
+    {% include 'modal.html' %}
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> <!-- Atualização do jQuery -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="{% static 'scripts/modal.js' %}"></script>
 </body>
 
 </html>
