--- a/cashboard/templates/login.html
+++ b/cashboard/templates/login.html
@@ -20,8 +20,8 @@
             {% endif %}
             <div class="login-header">
                 <div class="logo">
-                    <img src="" alt="img-logo">
-                    <h1>Ca$h Board</h1>
+                    <img src="{%static 'assets/logo2.png'%}" alt="">
+                    <p>Ca$h Board</p>
                 </div>
 
                 <p style="font-weight: bold;">Seja bem-vindo</p>
